# di-central-e2e-test

./: .gitignore  README.md
di_cloud/: README.md  pyproject.toml
di_cloud/br_scenarios/default/: descriptor.json  test_br_big_data.py  test_br_default_tenant.py
di_cloud/br_scenarios/non_default/: descriptor.json  test_br_non_default_tenant.py
di_cloud/cit_scenarios/pipelines/: descriptor.json  test_cit_pipeline_runtime_large_dataset_in_parallel.md  test_cit_pipeline_runtime_large_dataset_in_parallel.py  test_cit_pipeline_runtime_small_dataset_in_sequence.md  test_cit_pipeline_runtime_small_dataset_in_sequence.py
di_cloud/cit_scenarios/rms/: cit_rms_base.py  test_cit_rms_design.py  test_cit_rms_run_large_dataset_in_parallel.py  test_cit_rms_run_small_dataset_in_sequence.py
di_cloud/connection_data/: CET_BR_DEFAULT.json  CET_BR_HANA.json  CET_BR_TEST.json  CET_DI.json  CET_HANA_OC.json  CET_STAGING.json
di_cloud/customer_issues/: descriptor.json  test_customer_issues.md  test_customer_issues.py
di_cloud/e2e_scecnarios/pipelines/: descriptor.json  e2e_pipeline_base.py  test_e2e_pipeline_runtime_in_sequence.md  test_e2e_pipeline_runtime_in_sequence.py
di_cloud/jenkins/: cit_pipeline_runtime_large_dataset_in_parallel_gen1_jenkinsfile  cit_pipeline_runtime_large_dataset_in_parallel_gen2_jenkinsfile  cit_pipeline_runtime_small_dataset_in_sequence_jenkinsfile  cit_rms_run_large_dataset_in_parallel_jenkinsfile  cit_rms_run_small_dataset_in_sequence_jenkinsfile  customer_issues_jenkinsfile  e2e_pipeline_cds_jenkinsfile  e2e_pipeline_post_restore_big_data_jenkinsfile  e2e_pipeline_post_restore_default_jenkinsfile  e2e_pipeline_post_restore_nondefault_jenkinsfile  e2e_pipeline_pre_backup_big_data_jenkinsfile  e2e_pipeline_pre_backup_default_jenkinsfile  e2e_pipeline_pre_backup_nondefault_jenkinsfile  e2e_pipeline_slt_jenkinsfile  jenkins.md
di_cloud/jenkins/yaml/: cet_pod.yaml
di_cloud/utils/: case_base.py  case_pipeline.py  run_case.py  test_info.json
di_cloud/utils/cluster_helper/: control_center.py  get_kubeconfig.py  prepare_big_data.sh
di_cloud/utils/component/: component_base.py  connection_management.py  rms.py  system_management.py
di_cloud/utils/content/: conn.py
di_embedded/e2e_scenarios/: pyproject.toml
di_embedded/e2e_scenarios/connection_data/: CET_DMIS_2018.json  CET_DS.json  CET_FILE.json  CET_GBQ.json  CET_HANA_OP.json  CET_S4H_2021.json
di_embedded/e2e_scenarios/data_flow/: test_data_flow.md  test_data_flow.py
di_embedded/e2e_scenarios/replication_flow/: test_replication_flow.md  test_replication_flow.py
di_embedded/nzdm/: pyproject.toml
(+70 files in other folders)
