[tool.poetry]
name = "di-qa-e2e-cet-tests"
version = "0.2.0"
description = "DI central e2e testing scenarios"
authors = ["Tammy Yang <tammy.yang@sap.com>"]

[tool.poetry.dependencies]
python = "^3.10.9"
di-qa-e2e-validation = "0.2.3a6"
retry = "0.9.2"
unittest-xml-reporting = "3.2.0"


[[tool.poetry.source]]
# This is the SAP Artifactory that's use to _look up_ dependencies. 
# This is _not_ used for publishing this project as package!
name = "artifactory"
url = "https://int.repositories.cloud.sap/artifactory/api/pypi/di-qa-python-public/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


